@@ -66,7 +66,6 @@ public class VeluxKLFAPI {
      * <LI>Method {@link toString} to return a String.</LI>
      * </UL>
      */
-    @NonNullByDefault
     public static class CommandName {
         private String name;
 
@@ -90,7 +89,6 @@ public class VeluxKLFAPI {
      * <LI>Method {@link toString} to return a well-formatted String.</LI>
      * </UL>
      */
-    @NonNullByDefault
     public static class CommandNumber {
         private short commandNumber;
 
@@ -104,7 +102,7 @@ public class VeluxKLFAPI {
 
         @Override
         public String toString() {
-            return "0x" + Integer.toHexString(new Short(commandNumber).intValue());
+            return "0x" + Integer.toHexString(Short.valueOf(commandNumber).intValue());
         }
     }
 
@@ -129,7 +127,7 @@ public class VeluxKLFAPI {
         UNDEFTYPE((short) -1, "Unknown command."),
         // Special item: Shutdown of the connection
         GW_OPENHAB_CLOSE((short) -2, "openHAB connection shutdown command."),
-        // Special item: Shutdown of the connection
+        // Special item: Empty Command (used to send nothing and process an incoming message only)
         GW_OPENHAB_RECEIVEONLY((short) -3, "openHAB receive command."),
         // Velux specific commands
         GW_ERROR_NTF((short) 0x0000, "Provides information on what triggered the error."),
